dcs-web: display pathranking and ranking in the results

--- a/cmd/dcs-web/templates/results.html
+++ b/cmd/dcs-web/templates/results.html
@@ -12,6 +12,7 @@ amount of source results: {{.numresults}}
 <ul>
 {{range .results}}
 <li><a href="/show?file={{.SourcePackage}}{{.RelativePath}}&line={{.Line}}&numfiles={{$.numfiles}}"><code><strong>{{.SourcePackage}}</strong>{{.RelativePath}}</code>:{{.Line}}</a><br>
-<code>{{.Context}}</code></li>
+<code>{{.Context}}</code><br>
+PathRank: {{.PathRanking}}, Rank: {{.Ranking}}</li>
 {{end}}
 </ul>
