index: search with weighted=1 by default

--- a/cmd/dcs-web/templates/index.html
+++ b/cmd/dcs-web/templates/index.html
@@ -1,6 +1,7 @@
 <html>
 <body>
 <form action="/search" method="get">
+<input type="hidden" name="weighted" value="1">
 <input type="text" name="q">
 <input type="submit">
 </body>
