--- a/cmd/dcs-web/templates/index.html
+++ b/cmd/dcs-web/templates/index.html
@@ -4,5 +4,12 @@
 <input type="hidden" name="weighted" value="1">
 <input type="text" name="q">
 <input type="submit">
+</form>
+
+<pre>
+Search keywords:
+  filetype:c   - consider only .c and .h files
+                 supported: c, c++, perl, python, go, java, ruby, shell
+</pre>
 </body>
 </html>
