--- a/cmd/dcs-web/templates/results.html
+++ b/cmd/dcs-web/templates/results.html
@@ -26,6 +26,14 @@ a code {
     opacity: 0.4;
 }
 
+pre {
+    white-space: pre-wrap;       /* css-3 */
+    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+    white-space: -pre-wrap;      /* Opera 4-6 */
+    white-space: -o-pre-wrap;    /* Opera 7 */
+    word-wrap: break-word;       /* Internet Explorer 5.5+ */
+}
+
 .lnr {
     color: #999;
     text-align: right;
