results: disable autofocus, breaks keyboard navigation in some browsers

--- a/cmd/dcs-web/templates/results.html
+++ b/cmd/dcs-web/templates/results.html
@@ -56,7 +56,7 @@ pre {
   <p class="section"><a href="/">Code Search</a></p>
   <div id="searchbox">
 <form action="/search" method="get">
-<input type="text" name="q" value="{{.q}}" autofocus="autofocus">
+<input type="text" name="q" value="{{.q}}">
 <input type="submit" value="Search">
 </form>
   </div>
