results: make bullet points invisible

--- a/cmd/dcs-web/templates/results.html
+++ b/cmd/dcs-web/templates/results.html
@@ -18,6 +18,11 @@ a code {
     color: #00E;
 }
 
+#results {
+    list-style-type: none;
+    padding-left: 0;
+}
+
 #results li {
     margin-bottom: 1em;
 }
