s/amount/number (it’s countable) (Thanks Chris)

--- a/cmd/dcs-web/templates/results.html
+++ b/cmd/dcs-web/templates/results.html
@@ -93,8 +93,8 @@ pre {
 
 <div id="expertbox" style="background: #000; color: #eee; opacity: 0.75; float: right; border-radius: 5px; padding: 1em">
 {{if .timing}}
-amount of regexp results: {{.numfiles}}<br>
-amount of source results: {{.numresults}}<br>
+number of regexp results: {{.numfiles}}<br>
+number of source results: {{.numresults}}<br>
 Time to first regexp result: {{.t0}}<br>
 Time to receive and rank: {{.t1}}<br>
 Time to sort: {{.t2}}<br>
