results template: put query in the page title

--- a/cmd/dcs-web/templates/results.html
+++ b/cmd/dcs-web/templates/results.html
@@ -3,7 +3,7 @@ vim:ts=4:sw=4:expandtab
 --><!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Debian Code Search: {{.filename}}</title>
+<title>Debian Code Search: {{.q}}</title>
 <link rel="stylesheet" href="debcodesearch.css">
 <style type="text/css">
 pre, code {
