hide the expertbox by default
It was often misinterpreted by users.

--- a/cmd/dcs-web/templates/results.html
+++ b/cmd/dcs-web/templates/results.html
@@ -91,7 +91,7 @@ pre {
 
 <h2>Search Results for "{{.q}}"</h2>
 
-<div id="expertbox" style="background: #000; color: #eee; opacity: 0.75; float: right; border-radius: 5px; padding: 1em">
+<div id="expertbox" style="background: #000; color: #eee; opacity: 0.75; float: right; border-radius: 5px; padding: 1em; display: none">
 {{if .timing}}
 number of regexp results: {{.numfiles}}<br>
 number of source results: {{.numresults}}<br>
