--- a/cmd/dcs-web/templates/footer.html
+++ b/cmd/dcs-web/templates/footer.html
@@ -4,7 +4,7 @@
 <!--UdmComment-->
 <div id="fineprint">
 <p>© 2012-2013 Debian Code Search - <a href="./contact" rel="nofollow">Contact / Send Feedback</a></p>
-<p>dcs-web {{.version}}, see <a href="https://github.com/debiancodesearch/dcs/">github.com/debiancodesearch/dcs</a></p>
+<p>dcs-web {{.version}}, see <a href="https://github.com/Debian/dcs/">github.com/Debian/dcs</a></p>
 </div>
 <!--/UdmComment-->
 </div> <!-- end footer -->
