templates: also use SVG logo (retina support)

--- a/cmd/dcs-web/templates/error.html
+++ b/cmd/dcs-web/templates/error.html
@@ -65,7 +65,7 @@ pre {
 <div id="header">
    <div id="upperheader">
    <div id="logo">
-  <a href="./" title="Debian Home"><img src="./Pics/openlogo-50.png" alt="Debian" width="50" height="61"></a>
+  <a href="./" title="Debian Home"><img src="/Pics/openlogo-50.svg" alt="Debian" width="50" height="61"></a>
   </div> <!-- end logo -->
   <p class="section"><a href="/">Code Search</a></p>
   <div id="searchbox">
