per-pkg: add link to see all search results from a package

--- a/static/debcodesearch.css
+++ b/static/debcodesearch.css
@@ -73,6 +73,10 @@
 	margin-top: 1.5em;
 }
 
+#perpackage-results .packagename {
+	text-transform: uppercase;
+}
+
 #perpackage-results ul {
 	margin-top: 0;
 }
