pagination improvements: link next/prev arrows, …
• add rel="prev" and rel="next" because some browsers make use of them
• re-add link rel="prerender" for the next page
• do only one DOM update instead of many
• properly set href so that copying URLs works (and the :visited style!)

--- a/static/debcodesearch.css
+++ b/static/debcodesearch.css
@@ -23,7 +23,7 @@
 	text-decoration: underline;
 }
 
-#perpackage-pagination a, #pagination a, #pagination span, #perpackage-pagination span {
+#perpackage-pagination a, #pagination a {
 	margin-left:  0.2em;
 	margin-right: 0.2em;
 }
