--- a/cmd/dcs-web/templates/queryz.html
+++ b/cmd/dcs-web/templates/queryz.html
@@ -99,6 +99,10 @@ pre {
 <tr><th>files processed</th><td><code>{{.FilesProcessed}}</code></td></tr>
 <tr><th>files total</th><td><code>{{.FilesTotal}}</code></td></tr>
 </table>
+<form action="/queryz" method="post">
+<input type="hidden" name="cancel" value="{{.QueryId}}">
+<input type="submit" value="Cancel {{.Searchterm}}">
+</form>
 {{end}}
 
 {{ template "footer.html" }}
