fix javascript redirect URLs on server-rendered pages

--- a/cmd/dcs-web/templates/perpackage-results.html
+++ b/cmd/dcs-web/templates/perpackage-results.html
@@ -119,7 +119,7 @@ PathRank: {{.PathRank}}, Rank: {{.Ranking}}</li>
 <script type="text/javascript">
 <!--
 if (location.pathname.substr(0, '/search'.length) === '/search') {
-    window.location.replace('/results/{{.q}}/page_0');
+    window.location.replace('/perpackage-results/{{.q}}/2/page_{{.page}}');
 }
 -->
 </script>
