--- a/cmd/dcs-web/templates/results.html
+++ b/cmd/dcs-web/templates/results.html
@@ -120,7 +120,7 @@ PathRank: {{.PathRank}}, Rank: {{.Ranking}}</li>
 <script type="text/javascript">
 <!--
 if (location.pathname.substr(0, '/search'.length) === '/search') {
-    window.location.replace('/results/{{.q}}/page_0');
+    window.location.replace('/results/{{.q}}/page_{{.page}}');
 }
 -->
 </script>
