--- a/cmd/dcs-web/templates/queryz.html
+++ b/cmd/dcs-web/templates/queryz.html
@@ -96,7 +96,7 @@ pre {
 <tr><th>ended</th><td>{{.Ended}} (ran for {{.Duration}})</td></tr>
 <tr><th>done</th><td>{{.Done}}</td></tr>
 <tr><th>events</th><td>{{.NumEvents}}</td></tr>
-<tr><th>results</th><td>{{.NumResults}} (in {{.NumPackages}} source packages) (on {{.NumResultPages}} pages)</td></tr>
+<tr><th>results</th><td>{{.NumResults}} (on {{.NumResultPages}} pages)</td></tr>
 <tr><th>files processed</th><td><code>{{.FilesProcessed}}</code></td></tr>
 <tr><th>files total</th><td><code>{{.FilesTotal}}</code></td></tr>
 </table>
