--- a/cmd/dcs-web/templates/results.html
+++ b/cmd/dcs-web/templates/results.html
@@ -116,7 +116,9 @@ pre {
 PathRank: {{.PathRank}}, Rank: {{.Ranking}}</li>
 {{end}}
 </ul>
-
+<p>
+{{.pagination}}
+</p>
 <script type="text/javascript">
 <!--
 if (location.pathname.substr(0, '/search'.length) === '/search') {
