--- a/static/debcodesearch.css
+++ b/static/debcodesearch.css
@@ -6,24 +6,24 @@
 	text-align: center;
 }
 
-#pagination a:link
-, #perpackage-pagination a:link
+.pagination a:link
+, .perpackage-pagination a:link
 , #packages a:link
-, #pagination a:visited
-, #perpackage-pagination a:visited
+, .pagination a:visited
+, .perpackage-pagination a:visited
 , #packages a:visited {
 	text-decoration: none;
 }
-#pagination a:hover
-, #perpackage-pagination a:hover
+.pagination a:hover
+, .perpackage-pagination a:hover
 , #packages a:hover
-, #perpackage-pagination a:visited:hover
-, #pagination a:visited:hover
+, .perpackage-pagination a:visited:hover
+, .pagination a:visited:hover
 , #packages a:visited:hover {
 	text-decoration: underline;
 }
 
-#perpackage-pagination a, #pagination a {
+.perpackage-pagination a, .pagination a {
 	margin-left:  0.2em;
 	margin-right: 0.2em;
 }
@@ -50,7 +50,7 @@
 	border-color: #ebccd1;
 }
 
-#perpackage, #perpackage-results, #perpackage-pagination {
+#perpackage, #perpackage-results, .perpackage-pagination {
 	position: relative;
 	background-color: #fff;
 }
@@ -195,7 +195,7 @@ a code {
     opacity: 0.4;
 }
 
-#pagination, #perpackage-pagination {
+.pagination, .perpackage-pagination {
     margin-top: 2em;
     margin-bottom: 2em;
     margin-left: auto;
