Increase size of landing page search box.
It really is rather small at the moment, which is both fiddly a poor UX
affordance.

Signed-off-by: Chris Lamb <lamby@debian.org>

--- a/static/debcodesearch.css
+++ b/static/debcodesearch.css
@@ -6,6 +6,11 @@
 	text-align: center;
 }
 
+#searchdiv input[type=text] {
+	width: 350px;
+	padding: 7px;
+}
+
 .pagination a:link
 , .perpackage-pagination a:link
 , #packages a:link
