Fix redirects for search terms that need escaping.
fixes #51

--- a/cmd/dcs-web/templates/placeholder.html
+++ b/cmd/dcs-web/templates/placeholder.html
@@ -103,7 +103,7 @@ much better user experience with Debian Code Search, enable JavaScript.
 <script type="text/javascript">
 <!--
 if (location.pathname.substr(0, '/search'.length) === '/search') {
-    window.location.replace('/results/{{.q}}/page_0');
+    window.location.replace('/results/{{.q_escaped}}/page_0');
 }
 -->
 </script>
