sever-rendered perpackage-results: add pagination to the bottom as well
fixes #50

--- a/cmd/dcs-web/templates/perpackage-results.html
+++ b/cmd/dcs-web/templates/perpackage-results.html
@@ -116,6 +116,10 @@ PathRank: {{.PathRank}}, Rank: {{.Ranking}}</li>
 </ul>
 {{end}}
 
+<p>
+{{.pagination}}
+</p>
+
 <script type="text/javascript">
 <!--
 if (location.pathname.substr(0, '/search'.length) === '/search') {
