templates: remove static http: protocol from yandex URLs
fixes #58

--- a/cmd/dcs-web/templates/error.html
+++ b/cmd/dcs-web/templates/error.html
@@ -57,8 +57,8 @@ pre {
     width: {{.lnrwidth}}em;
 }
 </style>
-<link rel="stylesheet" href="http://yandex.st/highlightjs/7.0/styles/default.min.css">
-<script src="http://yandex.st/highlightjs/7.0/highlight.min.js"></script>
+<link rel="stylesheet" href="//yandex.st/highlightjs/7.0/styles/default.min.css">
+<script src="//yandex.st/highlightjs/7.0/highlight.min.js"></script>
 </head>
 <body>
 
