Make search form wider.

--- a/static/debcodesearch.css
+++ b/static/debcodesearch.css
@@ -11,6 +11,10 @@
 	padding: 7px;
 }
 
+#searchform input[type=text] {
+	width: 350px;
+}
+
 .pagination a:link
 , .perpackage-pagination a:link
 , #packages a:link
