css: remove useless @import, use .min.css everywhere
debian.css is already minified into debcodesearch.min.css, so the
@import resulted in loading that content twice.

Using debcodesearch.min.css everywhere shaves off 0.10s of the total
loading time (1.56s to 1.47s) and saves 1 request.

--- a/cmd/dcs-web/templates/show.html
+++ b/cmd/dcs-web/templates/show.html
@@ -4,7 +4,7 @@ vim:ts=4:sw=4:expandtab
 <html lang="en">
 <head>
 <title>Debian Code Search: {{.filename}}</title>
-<link rel="stylesheet" href="debcodesearch.css">
+<link rel="stylesheet" href="debcodesearch.min.css">
 <style type="text/css">
 pre, code {
     /* We need to make sure that the line numbers and the code itself have
