--- a/cmd/dcs-web/templates/footer.html
+++ b/cmd/dcs-web/templates/footer.html
@@ -3,7 +3,7 @@
 <hr>
 <div id="fineprint">
 <a href="http://developer.rackspace.com/"><img src="/Pics/rackspace.svg" alt="Powered by Rackspace Hosting" width="200" height="59" border="0" style="float: right"></a>
-<p>© 2012-2017 Debian Code Search - <a href="./contact" rel="nofollow">Contact / Send Feedback</a></p>
+<p>© 2012 Debian Code Search - <a href="./contact" rel="nofollow">Contact / Send Feedback</a></p>
 <p>dcs-web {{.version}}, see <a href="https://github.com/Debian/dcs/">github.com/Debian/dcs</a></p>
 </div>
 </div>
