templates: pass through pipeline for version variable

--- a/cmd/dcs-web/templates/placeholder.html
+++ b/cmd/dcs-web/templates/placeholder.html
@@ -105,4 +105,4 @@ much better user experience with Debian Code Search, enable JavaScript.
 </p>
 </noscript>
 
-{{ template "footer.html" }}
+{{ template "footer.html" . }}
