--- a/cmd/dcs-web/templates/results.html
+++ b/cmd/dcs-web/templates/results.html
@@ -123,4 +123,4 @@ PathRank: {{.PathRank}}, Rank: {{.Ranking}}</li>
 </p>
 </noscript>
 
-{{ template "footer.html" }}
+{{ template "footer.html" . }}
