--- a/cmd/dcs-web/templates/show.html
+++ b/cmd/dcs-web/templates/show.html
@@ -61,4 +61,4 @@ pre, code {
 </code></pre>
 
 <script>hljs.initHighlightingOnLoad();</script>
-{{ template "footer.html" }}
+{{ template "footer.html" . }}
