remove erroneously present ppanimation class from #perpackage
This fixes an invalid state transition with Firefox 57 where search results
would be hidden. Thanks to Ralf Jung for the report.

fixes #52 (most likely)

--- a/cmd/dcs-web/templates/javascript-results.html
+++ b/cmd/dcs-web/templates/javascript-results.html
@@ -24,7 +24,7 @@
 <div class="pagination"></div>
 </div>
 
-<div id="perpackage" class="ppanimation" style="display: none">
+<div id="perpackage" style="display: none">
 <h2>Results by package</h2>
 <div class="perpackage-pagination"></div>
 <div id="perpackage-results"></div>
