--- a/cmd/dcs-web/templates/footer.html
+++ b/cmd/dcs-web/templates/footer.html
@@ -5,6 +5,9 @@
 <a href="http://developer.rackspace.com/"><img src="/Pics/rackspace.svg" alt="Powered by Rackspace Hosting" width="200" height="59" border="0" style="float: right"></a>
 <p>© 2012 Debian Code Search - <a href="./contact" rel="nofollow">Contact / Send Feedback</a></p>
 <p>dcs-web {{.version}}, see <a href="https://github.com/Debian/dcs/">github.com/Debian/dcs</a></p>
+{{ if eq .host "codesearch.debian.net" }}
+<p>Did you know? You can access DCS via Cloudflare at <a href="https://dcs.zekjur.net">https://dcs.zekjur.net</a>.</p>
+{{ end }}
 </div>
 </div>
 <script type="text/javascript">
